[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify_integration"
version = "0.0.1"
description = "Shopify integration for ERPNext"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = ["frappe"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shopify_integration*"]

[project.optional-dependencies]
dev = ["pytest"]
