[metadata]
name = shopify_integration
version = attr: shopify_integration.__version__
description = Shopify integration for ERPNext
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    frappe

[options.extras_require]
dev =
    pytest
